# idegym

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile.jinja  README.md  conftest.py  entrypoint.py  entrypoint.sh  idegym.sh  pyproject.toml  supervisord.conf  test-entrypoint.sh
api/: pyproject.toml
api/src/idegym/api/: __init__.py  auth.py  capabilities.py  config.py  cpu.py  ctx.py  data.py  docker.py  download.py  exceptions.py  git.py  health.py  image_build.py  inspect.py  memory.py  paths.py  plugin.py  resources.py  status.py  type.py
api/src/idegym/api/orchestrator/: build.py  clients.py  jobs.py  mcp.py  operations.py  servers.py  snapshots.py
api/src/idegym/api/project/: reset.py
api/src/idegym/api/rewards/: compilation.py  inspection.py  setup.py  test.py
api/src/idegym/api/tools/: bash.py  file.py
backend-utils/: pyproject.toml
backend-utils/src/idegym/backend/: __init__.py
backend-utils/src/idegym/backend/resources/: bash-integration.bash
backend-utils/src/idegym/backend/utils/: bash_executor.py  diagnostics.py  diff_patch.py  environment.py  kubernetes_client.py  logging.py  otel.py  processor.py  renderer.py  utils.py
client/: pyproject.toml
client/src/idegym/client/: __init__.py  client.py  docker_api.py  docker_service.py  otel.py  server.py
client/src/idegym/client/operations/: clients.py  files.py  forwarding.py  jobs.py  project.py  rewards.py  servers.py  tools.py  utils.py
common-utils/: pyproject.toml
common-utils/src/idegym/image/: __init__.py  builder.py  plugin.py  plugins.py  serialization.py
common-utils/src/idegym/utils/: __init__.py  decorators.py  dict.py  dockerfile.py  functools.py  hashing.py  logging.py  path.py  quantity.py  serializer.py
e2e-tests-minikube/: README.md  __init__.py  pyproject.toml  run_tests.py  test_server_lifecycle.py
e2e-tests-minikube/config/: __init__.py  openenv_websocket_test_image_commands.Dockerfile  registry-pull-job.yaml  registry-push-job.yaml  test_image_commands.Dockerfile
e2e-tests-minikube/tests/: __init__.py  conftest.py  test_health.py  test_kaniko_build.py  test_openenv_websocket.py  test_server_lifecycle.py  test_server_strategies.py
e2e-tests-minikube/utils/: __init__.py  build_images.py  constants.py  idegym_utils.py  k8s_client.py  k8s_setup.py
examples/: .env.example  README.md  pyproject.toml
examples/openenv/: README.md  echo_env_example.py  tbench2_example.py
examples/verl/: .env.example  README.md  TRAINING_FLOW.md  pyproject.toml  run_django_idegym.sh
examples/verl/agent_loop/: agent_parsing_strategies.py  idegym_runner.py  mock_idegym_runner.py  swemini_django_agent_loop.py
examples/verl/config/: agent_loop_config.yaml  django_idegym_grpo.yaml
examples/verl/image/: build.py  django.yaml
examples/verl/test/: test_idegym_runner_integration.py
examples/verl/utils/: postprocessing.py
image-builder/: pyproject.toml
image-builder/src/idegym/image/: __init__.py  builder.py  docker_api.py  docker_service.py  dockerfile.py  plugin.py  plugins.py  serialization.py
image-builder/src/idegym/image/templates/: runtime.Dockerfile.jinja  server.Dockerfile.jinja
local-testing/: README.md  pyproject.toml  run_tests.py
local-testing/config/: kustomization.yaml
local-testing/scripts/: build_images.py  k8s_setup.py
local-testing/tests/: conftest.py  test_annotated_types.py  test_health.py  test_orchestrator.py  test_server_flow_local.py  test_server_lifecycle.py  test_server_strategies.py  utils.py
local-testing/utils/: __init__.py  k8s_setup.py
orchestrator/: Dockerfile  README.md  alembic.ini  pyproject.toml  supervisord.conf
orchestrator/hydra_configs/logging/: base.yaml
orchestrator/hydra_configs/orchestrator/: base.yaml
orchestrator/kubernetes/: kustomization.yaml
orchestrator/kubernetes/grafana/: configmap.yaml  deployment.yaml  service.yaml
orchestrator/kubernetes/orchestrator/: deployment.yaml  ingress.yaml  service-account.yaml  service.yaml
orchestrator/kubernetes/postgresql/: service.yaml  statefulset.yaml
orchestrator/kubernetes/prometheus/: configmap.yaml  deployment.yaml  service-account.yaml  service.yaml
orchestrator/kubernetes/tempo/: configmap.yaml  deployment.yaml  service.yaml
orchestrator/migrations/: env.py
orchestrator/migrations/versions/: 001_down.sql  001_initial_schema.py  001_up.sql
orchestrator/src/idegym/orchestrator/: __init__.py  alembic.ini  kaniko_docker_api.py  main.py  mcp.py  migration_manager.py  nodes_holder.py  pod_snapshot.py  watcher.py
orchestrator/src/idegym/orchestrator/database/: database.py  helpers.py  models.py
orchestrator/src/idegym/orchestrator/hydra_configs/: config.yaml
orchestrator/src/idegym/orchestrator/migrations/: README.md  env.py  script.py.mako
orchestrator/src/idegym/orchestrator/router/: async_operation.py  build_images.py  client.py  dashboard.py  diagnostics.py  forwarding.py  server.py  snapshot.py
orchestrator/src/idegym/orchestrator/templates/: clients.html  error.html  index.html  pods.html  rules.html  servers.html
orchestrator/src/idegym/orchestrator/util/: decorators.py  errors.py
plugins/defaults/: pyproject.toml
plugins/idea/: README.md  pyproject.toml
plugins/idea/project-opener/: build.gradle.kts  settings.gradle.kts
plugins/idea/scripts/: start-idea.sh  supervisord-idea.conf
plugins/plugin-utils/: pyproject.toml
plugins/pycharm/: README.md  pyproject.toml
plugins/pycharm/project-opener/: build.gradle.kts
plugins/pycharm/scripts/: check-mcp.sh  start-pycharm.sh  supervisord-pycharm.conf
rewards/: pyproject.toml
rewards/src/idegym/rewards/: __init__.py  compilation_checker.py  reward_service.py  router.py  setup_checker.py  test_checker.py
server/: dependencies.py  main.py  plugin_state.py  pyproject.toml
server/hydra_configs/: config.yaml
server/hydra_configs/project/: base.yaml
server/hydra_configs/server/: base.yaml
server/router/: fs.py  project.py  rewards.py  root.py  tools.py
tools/: pyproject.toml
tools/src/idegym/tools/: __init__.py  file_manager.py  router.py  tool_service.py
(+166 files in other folders)
