[project]
name = "idegym"
version = "0.0.0.dev0"
readme = "README.md"
authors = [
    { name = "Daniil Mironov", email = "daniil.mironov@jetbrains.com" },
    { name = "Ozren Dabić", email = "ozren.dabic@jetbrains.com" },
    { name = "Valentin Fondaratov", email = "valentin.fondaratov@jetbrains.com" },
    { name = "Vladimir Poliakov", email = "vladimir.poliakov@jetbrains.com" },
    { name = "Vseslav Kasatskii", email = "vseslav.kasatskii@jetbrains.com" },
]
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "from-root>=1.3.0",
    "jinja2>=3.1.6",
    "kubernetes-asyncio>=35.0.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "testcontainers[postgres]>=4.14.2",
    "pytest-randomly>=4.0.1",
    "python-dotenv>=1.2.2",
    "python-on-whales>=0.81.0",
    "pyyaml>=6.0.3",
    "requests>=2.33.0",
    "ruff>=0.15.11",
    "supervisor>=4.3.0",
    "tqdm>=4.67.3",
    "tomlkit>=0.14.0",
]

[tool.uv]
required-version = ">=0.10.0"

[tool.uv.sources]
idegym-api = { workspace = true }
idegym-backend-utils = { workspace = true }
idegym-client = { workspace = true }
idegym-common-utils = { workspace = true }
idegym-image-builder = { workspace = true }
idegym-orchestrator = { workspace = true }
idegym-plugin-defaults = { workspace = true }
idegym-plugin-idea = { workspace = true }
idegym-plugin-pycharm = { workspace = true }
idegym-rewards = { workspace = true }
idegym-server = { workspace = true }
idegym-tools = { workspace = true }

[tool.uv.workspace]
members = [
    "api",
    "backend-utils",
    "client",
    "common-utils",
    "image-builder",
    "orchestrator",
    "plugins/defaults",
    "plugins/idea",
    "plugins/pycharm",
    "rewards",
    "server",
    "tools",
]

[tool.pytest.ini_options]
python_files = ["test_*.py"]
python_functions = ["test_*"]
pythonpath = [
    ".",
    "e2e-tests",
    "integration-tests",
    "unit-tests",
]
testpaths = [
    "e2e-tests",
    "integration-tests",
    "unit-tests",
]
addopts = [
    "--import-mode=importlib",
]
norecursedirs = [
    "e2e-tests/test_projects",
    ".git",
    ".venv",
    "__pycache__",
    "node_modules",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "e2e: marks end-to-end test suite",
    "integration: marks integration test suite",
    "unit: marks unit test suite",
    "docker: marks tests that should be run inside a Docker container",
    "ide_integrations: marks tests that build and run a full IDE image (5-10 min); excluded from CI, run manually with -m 'e2e and ide_integrations'",
]

[tool.ruff]
indent-width = 4
line-length = 120
target-version = "py312"

[tool.ruff.lint]
fixable = ["ALL"]
extend-select = ["I"]

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"
skip-magic-trailing-comma = false
