[project]
name = "idegym-client"
version = "0.0.0.dev0"
description = "IdeGYM Client"
authors = [
    { name = "Daniil Mironov", email = "daniil.mironov@jetbrains.com" },
    { name = "Ozren Dabić", email = "ozren.dabic@jetbrains.com" },
    { name = "Valentin Fondaratov", email = "valentin.fondaratov@jetbrains.com" },
    { name = "Vladimir Poliakov", email = "vladimir.poliakov@jetbrains.com" },
]
requires-python = ">=3.12"
dependencies = [
    "idegym-api",
    "idegym-common-utils",
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
    "python-on-whales>=0.78.0",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
otel = [
    "opentelemetry-sdk>=1.36.0",
    "opentelemetry-exporter-otlp>=1.36.0",
    "opentelemetry-instrumentation-httpx>=0.57b0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/idegym"]
