[project]
name = "idegym-common-utils"
version = "0.0.0.dev0"
description = "IdeGYM Common Utils"
authors = [
    { name = "Ozren Dabić", email = "ozren.dabic@jetbrains.com" },
    { name = "Vladimir Poliakov", email = "vladimir.poliakov@jetbrains.com" },
    { name = "Vseslav Kasatskii", email = "vseslav.kasatskii@jetbrains.com" },
]
requires-python = ">=3.12"
dependencies = [
    "idegym-api>=0.0.0.dev0",
    "hydra-core>=1.3.2",
    "jinja2>=3.1.5",
    "pyyaml>=6.0.2",
    "structlog>=25.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/idegym"]
