[project]
name = "idegym-e2e-tests"
version = "0.0.0.dev0"
description = "End-to-end integration testing for IdeGYM on minikube"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "from-root>=1.3.0",
    "idegym-client",
    "idegym-common-utils",
    "jinja2>=3.1.0",
    "kubernetes-asyncio>=32.3.2",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.24.0",
    "python-dotenv>=1.0.0",
    "python-on-whales>=0.60.0",
    "pyyaml>=6.0",
    "requests>=2.32.5",
]

[tool.uv.sources]
idegym-client = { workspace = true }
idegym-common-utils = { workspace = true }

[tool.pytest.ini_options]
pythonpath = ["."]
