[project]
name = "local-testing"
version = "0.1.0"
description = "Local integration testing for IdeGYM on minikube"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "idegym-client",
    "idegym-common-utils",
    "kubernetes-asyncio>=32.3.2",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.24.0",
    "requests>=2.32.5",
    "python-dotenv>=1.0.0",
]

[tool.uv.sources]
idegym-client = { workspace = true }
idegym-common-utils = { workspace = true }
