[project]
name = "idegym-tools"
version = "0.0.0.dev0"
description = "IdeGYM Tools"
authors = [
    { name = "Ozren Dabić", email = "ozren.dabic@jetbrains.com" },
    { name = "Vladimir Poliakov", email = "vladimir.poliakov@jetbrains.com" },
]
requires-python = ">=3.12"
dependencies = [
    "idegym-api",
    "idegym-backend-utils",
]

[project.optional-dependencies]
server = [
    "fastapi[standard]>=0.135.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/idegym"]
