[project]
name = "idegym-plugin-idea"
version = "0.0.0.dev0"
description = "IdeGYM IntelliJ IDEA Plugin (image + server + client)"
authors = [
    { name = "Ozren Dabić", email = "ozren.dabic@jetbrains.com" },
    { name = "Vladimir Poliakov", email = "vladimir.poliakov@jetbrains.com" },
    { name = "Vseslav Kasatskii", email = "vseslav.kasatskii@jetbrains.com" },
    { name = "Daniil Mironov", email = "daniil.mironov@jetbrains.com" },
]
requires-python = ">=3.12"
dependencies = [
    "idegym-api",
    "idegym-plugin-defaults",
    "jinja2>=3.1.5",
    "pydantic>=2.10.6",
]

[project.optional-dependencies]
server = [
    "fastapi[standard]>=0.135.2",
]

[project.entry-points."idegym.plugins.image"]
idea = "idegym.plugins.idea.image:Idea"

[project.entry-points."idegym.plugins.server"]
idea = "idegym.plugins.idea.server:IdeaPlugin"

[project.entry-points."idegym.plugins.client"]
idea = "idegym.plugins.idea.client:IdeaClientOperations"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/idegym"]
