[project]
name = "idegym-plugin-utils"
version = "0.0.0.dev0"
description = "IdeGYM Plugin Utilities - shared scripts and utilities for IDE plugins"
authors = [
    { name = "Vladimir Poliakov", email = "vladimir.poliakov@jetbrains.com" },
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/idegym"]
