[project]
name = "idegym-plugin-pycharm"
version = "0.0.0.dev0"
description = "IdeGYM PyCharm Plugin (image + server + client)"
authors = [
    { name = "Ozren Dabić", email = "ozren.dabic@jetbrains.com" },
    { name = "Vladimir Poliakov", email = "vladimir.poliakov@jetbrains.com" },
    { name = "Vseslav Kasatskii", email = "vseslav.kasatskii@jetbrains.com" },
    { name = "Daniil Mironov", email = "daniil.mironov@jetbrains.com" },
]
requires-python = ">=3.12"
dependencies = [
    "idegym-api",
    "idegym-plugin-defaults",
    "pydantic>=2.10.6",
]

[project.optional-dependencies]
server = [
    "fastapi[standard]>=0.135.2",
]

[project.entry-points."idegym.plugins.image"]
pycharm = "idegym.plugins.pycharm.image:PyCharm"

[project.entry-points."idegym.plugins.server"]
pycharm = "idegym.plugins.pycharm.server:PyCharmPlugin"

[project.entry-points."idegym.plugins.client"]
pycharm = "idegym.plugins.pycharm.client:PycharmClientOperations"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/idegym"]
